# myfirststepsinprogramming

./: README.md
tasks/task1/: task1.cpp
tasks/task2/: CMakeLists.txt
tasks/task2/src/: Task.cpp  Task.h  variant.cpp
tasks/task3/: task3.cpp
tasks/task4/: task4.cpp
